# public-python-modules

./: README.md  pyproject.toml  requirements.txt
aws/: README.md  pyproject.toml
aws/src/aws/: test_module.py  version.py
example-project/: README.md  app.py  requirements.txt
src/ppm/: backblaze.py  boto3.py  corrupt.py  datetime.py  downloader.py  env.py  freshdesk.py  log.py  mailgun.py  mailgun.pyi  other.py  report.py  s3.py  sqs.py  telegram.py
src/typing/ppm/: report.pyi
stubs/ppm/: telegram.pyi
tests/: __init__.py
