[project]
authors = [
    { name = "Agna Lumi", email = "agna.lumi@gmail.com" },
    { name = "Agustín Orlando", email = "agusavior@gmail.com" }
]
description = "AWS presentation layer."
name = "ppm"
requires-python = ">=3.6.9"
version = "1.8"

[build-system]
build-backend = "hatchling.build"
requires = [
    "hatchling",
    "requests==2.26.0",
]
