[project]
authors = [
    { name = "Agna Lumi", email = "agna.lumi@gmail.com" },
    { name = "Agustín Orlando", email = "agusavior@gmail.com" }
]
description = "Public useful modules for Fanaty."
name = "ppm"
requires-python = ">=3.6.9"
version = "2.0"

[build-system]
build-backend = "hatchling.build"
requires = [
    "hatchling",
    "requests==2.26.0",
]
