[project]
authors = [
    { name = "Agna Lumi", email = "agna.lumi@gmail.com" },
    { name = "Agustín Orlando", email = "agusavior@gmail.com" }
]
description = "Public useful modules for Fanaty."
name = "ppm"
requires-python = ">=3.6.9"
version = "4.5"

dependencies = [
    "requests==2.26.0",
    "colorlog==4.1.0",
    "boto3<=1.23.26",
]

[build-system]
build-backend = "hatchling.build"
requires = [
    "hatchling",
    "requests==2.26.0",
    "colorlog==4.1.0",
    "pytz==2021.3",
    "boto3<=1.23.26",
]
